<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Car Collector</string>
    <string name="main_camera">Main Camera</string>
    <string name="user_profile">User Profile</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>

    <string name="action_check_updates">Update</string>

    <!-- Error messages -->
    <string name="errorQueryTitle">Oops, something went wrong!</string>
    <string name="errorQueryMessage">Do you want to try and obtain the car again?</string>
    <string name="errorQueryCancel">Cancel</string>
    <string name="errorQueryRetry">Retry</string>

    <string name="errorCarExistsMessage">You have already collected this car.</string>
    <string name="errorCarexistsClose">Close</string>

    <string name="resetDatabaseTitle">Reset your collection?</string>
    <string name="resetDatabaseMessage">You will lose all your cars!</string>
    <string name="resetDatabaseErase">Reset</string>

    <string name="pollution">Pollution</string>

    <!-- Toasts -->
    <string name="carCollected">Car added to collection.</string>
    <string name="carAlreadyCollected">Car already in collection.</string>

    <!-- About view -->
    <string name="authors">Authors</string>
    <string name="theAuthors">Jakob Þórðarson, Ólafur Konráðsson, Steinar Eyþór Valsson</string>
    <string name="about">About</string>
    <string name="aboutApp">This app was designed at Reykjavik University in the Advanced Android course.</string>
    <string name="howTo">How To</string>
    <string name="howToApp">Input an Icelandic license plate to view info on the matching car and collect the car for XP and levels</string>

    <!-- Car view -->
    <string name="registered">Registered at</string>
    <string name="weight">Weight</string>
    <string name="emission">CO2 emission</string>
    <string name="type">Type</string>
    <string name="subtype">SubType</string>

    <!-- Home screen -->
    <string name="homeWelcome">Hello,</string>
    <string name="homeMessage">Search for a car registration number.</string>
    <string name="homeSubMessage">You will receive info about that car and it will be added to your collection.</string>
    <string name="hint1">Search for licence plate numbers</string>
    <string name="hint2">Search for cars by taking a picture</string>
</resources>
