<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/aboutScroll">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:padding="25dp">
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:id="@+id/authorLayout"
                    android:layout_marginBottom="25dp"
                    android:padding="10dp"
                    android:baselineAligned="true"
                    android:background="@drawable/container_dropshadow"
                    android:orientation="vertical">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge"
                          android:layout_gravity="left"
                          android:textStyle="bold"
                          android:layout_marginTop="15dp"
                          android:layout_marginLeft="20dp"
                          android:text="@string/authors"
                          android:typeface="normal" android:textSize="35dp"
                          android:gravity="left"/>
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge"
                          android:layout_gravity="left"
                          android:gravity="left"
                          android:textColor="#aaa"
                          android:layout_margin="20dp"
                          android:text="@string/theAuthors"
                          android:id="@+id/authors" android:typeface="normal" android:textSize="16dp"
                          android:textStyle="italic" android:singleLine="false"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:id="@+id/aboutLayout"
                    android:background="@drawable/container_dropshadow"
                    android:layout_marginBottom="25dp" android:padding="10dp" android:baselineAligned="true"
                    android:layout_below="@+id/authorLayout"
                    android:orientation="vertical">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge"
                          android:layout_gravity="right"
                          android:textStyle="bold"
                          android:layout_marginTop="15dp"
                          android:layout_marginRight="20dp"
                          android:text="@string/about"
                          android:typeface="normal" android:textSize="35dp"
                        />
                <TextView android:layout_width="230dp" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:layout_gravity="right"
                          android:gravity="right"
                          android:layout_margin="20dp"
                          android:text="@string/aboutApp"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:id="@+id/howToLayout"
                    android:background="@drawable/container_dropshadow"
                    android:layout_marginBottom="25dp" android:padding="10dp" android:baselineAligned="true"
                    android:layout_below="@+id/aboutLayout"
                    android:orientation="vertical">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge"
                          android:layout_gravity="left"
                          android:textStyle="bold"
                          android:layout_marginTop="15dp"
                          android:layout_marginLeft="20dp"
                          android:text="@string/howTo"
                          android:typeface="normal" android:textSize="35dp"
                        />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:layout_gravity="left"
                          android:gravity="left"
                          android:layout_margin="20dp"
                          android:text="@string/howToApp"
                        />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
