<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingTop="55dp" android:paddingLeft="35dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/homeWelcome"
                android:id="@+id/welcome_text" android:textSize="95dp"
                android:layout_weight="1.14" android:typeface="normal"
                />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="133dp" android:gravity="right">
        <TextView
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/homeMessage"
                android:id="@+id/textView" android:layout_gravity="center"
                android:typeface="normal" android:textSize="30dp" android:layout_weight="0.05"
                android:paddingTop="40dp" android:layout_alignParentEnd="false" android:layout_alignParentStart="false"
                />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center_horizontal" android:paddingLeft="35dp">
        <TextView android:layout_width="303dp" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/homeSubMessage"
                  android:id="@+id/textView4" android:layout_gravity="center" android:typeface="normal"
                  android:textSize="30dp" android:layout_weight="0.05" android:paddingTop="40dp"
                  android:layout_alignParentEnd="false" android:layout_alignParentStart="false"/>
    </RelativeLayout>
</LinearLayout>